    Fixed: iMSCP_Update_Database::addIndex() doesn't allows to set index length (stdlib)
    Fixed: Uncaught ReferenceError: ajaxStop is not defined (admin level)
    Fixed: Wrong behavior with exception handler when database connection is not available (stdlib)
    Fixed: Privileges on database that contains wildcards are not removed when SQL user is assigned to many databases
    Backported: iMSCP\Crypt library from 1.3.x branch (not used by core atm)
    Removed: User deletion confirmation pages (admin and reseller levels)
    Removed: iMSCP_NetworkCard class; replaced by iMSCP\Net class (stdlib)
    Rewritten: FTP chooser interface to avoid usage of iframe and allows fine-grained filtering (client level)
    Rewritten: Protected area interface (client level)

INSTALLER
    Added: --fix-permissions command line option. See errata file for more details.
    Added: Check for maximum supported PHP/Perl versions
    Added: Check to prevent downgrade attempts (when DB schema change is involved)
    Added: Conditional statement feature for install.xml files (copy_config items only)
    Fixed: '_' and '%' wildcards must be escaped in GRANT statements
    Fixed: Debug and verbose modes must be set early
    Fixed: Don't die on misconfigured server hostname. Just ask for a valid hostname instead
    Fixed: Invalid regexes for SQL user/password (Package::PhpMyAdmin::Installer)
    Fixed: libmariadbclient18 package not provided in Debian Stretch (testing) repository
    Fixed: /etc/mailname file not updated when reconfiguring system hostname
    Fixed: Ignore SIGNINT to prevent user aborting installer in wrong way
    Fixed: MySQL server 5.6 no longer available for Ubuntu 16.04 (replaced by MySQL server 5.7)
    Fixed: Plugin setup listeners are no longer registered (regression fix)
    Fixed: SQL user and password not correctly escaped in imscp.cnf file (Servers::sqld::mysql::installer)